Updated algorithm stacks

--- a/main.tex
+++ b/main.tex
@@ -586,7 +586,7 @@ During our research, we explored various combinations out of the possible combin
 
 \begin{figure}
   \centering
-  \includegraphics[width=4.61in,height=2.38in]{image3.png}
+  \includegraphics[width=4.61in,height=2.38in]{clustering_stack.png}
   \caption{Algorithms and their actual operation stacks.}
   \label{fig:clustering_stacks}
 \end{figure}
